--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.thudo.react_native_android_exoplayer"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -22,7 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:0.17.+'
     compile project(':exoplayer')
 }
