--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
-//    compile 'com.facebook.react:react-native:0.17.+'
-    compile project(':ReactAndroid')
+    compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':exoplayer')
 }
